--- a/wiki/FAQs.wiki
+++ b/wiki/FAQs.wiki
@@ -17,7 +17,7 @@
  MoonPy is the name of our most promising game we have developed for project tether so far. It is written in python (hence the name) and is currently the only program we plan on releasing.
 
   * Why are you using python, why not a real language like C++?
-  There are many reasons we're using python, it's simple to code, easily portable to different OS's, and more then capable of doing what we require. There is an experimental branch called MoonX written in C++ but it is much less developed then MoonPy. MoonX is not available on SVN and there are currently no plans on ever releasing it.
+  There are many reasons we're using python, it's simple to code, easily portable to different OS's, and more then capable of doing what we require.
 
   * What OS are you developing MoonPy for?
   We are intentionally making MoonPY to be fully compatible with Linux, osX, and Windows. It should work on any OS capable of using python with little extra effort. 
