--- a/wiki/Ideas.wiki
+++ b/wiki/Ideas.wiki
@@ -31,6 +31,7 @@
  * Special abilities that cost energy 
   # slower power bar 
   # power bar distance indicator
+  # Temporary wind immunity
  * radar unit (bomb destination appears within it's FoV)
  * simultaneous turns
  * vampire clamp (steals energy, EVIL IDEA!)
@@ -180,8 +181,6 @@ With OMBC you can see the 'energy' flow along the tethers and everything is inte
 
 Wireless aspects?
 This is similar to the energy production idea but if you figure any unconnected devices must transmist data wirelessly then that could be intercepted. Maybe if we have many 'untethered' objects we can have an option where those things can be 'detected' from their transmissions. Maybe along the lines that they show up in FoW no matter what. This would definitely be a variant since that would drastically affect the usage of balloons. 
-
-
 
 
 
