--- a/wiki/Code_proposals.wiki
+++ b/wiki/Code_proposals.wiki
@@ -20,10 +20,10 @@ Units will be defined by objects with the following attributes:
 
 = Version System =
 As the game progresses different versions will be made as upgrades occur. As features are implemented or changed it is highly likely that networking protocols, map files, save files and preference files will become incompatible. In order to prevent errors due to incompatibilities a version number will be hardcoded for each of these systems. In the event the game finds an incompatible version (such as for a recent update) then the game will be capable of taking the appropriate actions. The names of these variables and their values currently are:
-  * game.settingsversion = 2 (for game settings)
-  * game.networkversion = 0 (for networking)
-  * game.mapversion = 0 (for maps)
-  * game.savegameversion = 0 (for game saves)
+  * gvars.settingsversion = 2 (for game settings)
+  * gvars.networkversion = 0 (for networking)
+  * gvars.mapversion = 0 (for maps)
+  * gvars.savegameversion = 0 (for game saves)
 
 = Map System =
 For each game map there will actually be two maps that will be synced to each other. First there will be a 'logicmap' which will be the location of terrain the computer reads from the map file. There will also be an 'imagemap' which will be nothing more then a PNG file created from the logicmap. The imagemap is what the player will see when playing the game and moving around the map will function by simply showing different sections of the image. The computer will continue to use the logicmap in order to determine collisions between objects and the terrain. This brings up the question of how this will affect FoW though. If the map the player sees is nothing more then standard image being moved around will the FoW be part of that image or will we need have to have another 'map' that moves around identically to the imagemap but is shadowed for the parts the FoW covers?
