--- a/trunk/README
+++ b/trunk/README
@@ -8,6 +8,9 @@ This game requires Python2.4 and Pygame in order to run successfully. Here are t
 http://www.python.org/download/
 http://www.pygame.org/download.shtml
 
+This game also requires having the PIL library installed. On linux this can generally be installed through your distros
+repository. For windows and osX we have included the PIL binary installers. 
+
 *WARNING* The latest version of Python, Python2.5, does not work with MoonPy and has resulted in partially locking up computer systems during testing. Do not use MoonPy with other versions of Python besides 2.4.
 
 RUNNING Moon.Py
