--- a/wiki/Ideas.wiki
+++ b/wiki/Ideas.wiki
@@ -38,8 +38,8 @@
  * Scout unit (Balloon/crawler combo that flies around discovering map, limited duration?)
  * Arbitrary number of players? that way if you wanted you could have a 100 player game *grins* -- Because player color has to be uniquely designated for each player there will be a player limit cap. However we are planning to have the cap easily extended by simply adding more player colors into the code.
  * Undersea tether (extra cost?)
- * True spherical map (original moonbase was torus)
- * Full 3D map and buildings, allowing for camera rotation?
+ * True spherical map (original moonbase was torus) -- Current MoonPy engine is incompatible with this idea and will require major changes by someone willing to do this.
+ * Full 3D map and buildings, allowing for camera rotation? -- Current MoonPy engine is incompatible with this idea and will require a complete rewrite by someone willing to do this.
  * Show energy pools on the minimap
  * Hotseat compatibility (at least for non-FoW games)
 
@@ -159,7 +159,5 @@ With OMBC you can see the 'energy' flow along the tethers and everything is inte
 
 Wireless aspects?
 This is similar to the energy production idea but if you figure any unconnected devices must transmist data wirelessly then that could be intercepted. Maybe if we have many 'untethered' objects we can have an option where those things can be 'detected' from their transmissions (radar building maybe?). Maybe along the lines that they show up in FoW no matter what. This would definitely be a variant since that would drastically affect the usage of balloons. 
-
-
 
 
