Edited wiki page through web user interface.

--- a/wiki/Code_proposals.wiki
+++ b/wiki/Code_proposals.wiki
@@ -1,4 +1,5 @@
 #summary Proposed coding ideas
+#labels Phase-Requirements
 
 = Introduction =
 This page is a place to put code snippets and ideas on code logic for features that will be implemented later. 
