--- a/wiki/FAQs.wiki
+++ b/wiki/FAQs.wiki
@@ -8,13 +8,17 @@
   Moonbase Commander has quite often been called the best game no one has ever heard of. Most people describe it as a unique combination of Starcraft and Scorched Earth but that doesn't say much. The best way to find out what Moonbase Commander is like is to play the game.
 
   * Well then where can I go to play the game?
-  Sadly project tether is currently not far enough along for us to give you an idea of what Moonbase Commander is really like. Your best option at this time would be to play the original Moonbase Commander. Although not open source we do have a copy of the original Moonbase Commander demo which is located [http://tether.googlecode.com/files/moonbasecommanderdemo.exe here].
+  Although not open source we do have a copy of the original Moonbase Commander demo which is located [http://tether.googlecode.com/files/moonbasecommanderdemo.exe here].
 
   * Yeah that is a cool game, so why are you trying to recreate it?
   While Moonbase Commander is a great game, there are some flaws and glitches that have never been fixed. Because the game has not recieved any support from the parent company for over 5 years we assume that they will never be resolved. Rather then live with it we started this project to fix it ourselves
 
  * What is MoonPy?
- MoonPy is the name of our most promising game we have developed for project tether so far. It is written in python (hence the name) and is currently the only program we plan on releasing. It is currently at the alpha stage but we are hoping to release our first beta version in a few months.
+ MoonPy is the name of our most promising game we have developed for project tether so far. It is written in python (hence the name) and is currently the only program we plan on releasing.
+
+ * How far along is MoonPy?
+ MoonPy is currently at alpha stage and we are hoping to reach beta in a few months or so. Currently it is *technically* possible to play a 1v1 game against another human player launching hubs and bombs at each other however there are still lots of bugs and many major features have not yet been implemented.
+
 
   * Why are you using python, why not a real language like C++?
   There are many reasons we're using python but the top 3 reasons are: it's simple to code, easily portable to different OS's, and more then capable of doing what we require.
