--- a/wiki/FAQs.wiki
+++ b/wiki/FAQs.wiki
@@ -8,7 +8,7 @@
   Moonbase Commander has quite often been called the best game no one has ever heard of. Most people describe it as a unique combination of Starcraft and Scorched Earth but that doesn't say much. The best way to find out what Moonbase Commander is like is to play the game.
 
   * Well then where can I go to play the game?
-  Although not open source we do have a copy of the original Moonbase Commander demo which is located [http://tether.googlecode.com/files/moonbasecommanderdemo.exe here].
+  Project tether currently isn't developed enough to provide a true idea of what we're trying to recareate. We used to have a copy of the free trial available for download here. Sadly because of space limitations we have had to remove it to make room for other stuff. Your best option would be to do a web search for the free demo and hope you can still find it.
 
   * Yeah that is a cool game, so why are you trying to recreate it?
   While Moonbase Commander is a great game, there are some flaws and glitches that have never been fixed. Because the game has not recieved any support from the parent company for over 5 years we assume that they will never be resolved. Rather then live with it we started this project to fix it ourselves
@@ -17,11 +17,11 @@
  MoonPy is the name of our most promising game we have developed for project tether so far. It is written in python (hence the name) and is currently the only program we plan on releasing.
 
  * How far along is MoonPy?
- MoonPy is currently at alpha stage and we are hoping to reach beta in a few months or so. Currently it is *technically* possible to play a 1v1 game against another human player launching hubs and bombs at each other however there are still lots of bugs and many major features have not yet been implemented.
+ MoonPy is currently at alpha stage and we are hoping to reach beta in a few months or so. Be aware we've been hoping to reach beta 'in a few months or so' for over 6 months. Currently it is *technically* possible to play a 1v1 game against another human player launching hubs and bombs at each other however there are still lots of bugs and many major features have not yet been implemented.
 
 
   * Why are you using python, why not a real language like C++?
-  There are many reasons we're using python but the top 3 reasons are: it's simple to code, easily portable to different OS's, and more then capable of doing what we require.
+  There are many reasons we're using python but the top 3 reasons are: it's simple to code, easily portable to different OS's, and it's capable of doing what we require.
 
   * What OS are you developing MoonPy for?
   We are intentionally making MoonPy to be fully compatible with Linux, osX, and Windows. Theoretically it should work on any OS that has python installed with little extra effort however we are not planning on doing any compatibility testing for other systems. 
