--- a/wiki/OMBCfacts.wiki
+++ b/wiki/OMBCfacts.wiki
@@ -2,7 +2,7 @@
 #labels Phase-Requirements
 
 = Hub and offense firing stats =
-OMBC map editor uses a grid system for placing objects such as buildings, water, and energy. Small energy pools only take up one grid square each. By creating a special map with small energy pools being used to mark distance I was able to measure roughly how far shots travel without wind or height differences. Be aware that a single screen (not a map) is an exact 8x8 grid. 
+OMBC map editor uses a grid system for placing objects such as buildings, water, and energy. Small energy pools only take up one grid square each. By creating a special map with small energy pools being used to mark distance I was able to measure roughly how far shots travel without wind or height differences. Be aware that a single screen (not a map) is an exact 8x8 grid. Also the grid system for the map and the grid system for placing units don't sync 100% with each other. The tiles for the map are bigger then each unit is in the game. Also each unit is bigger then the tethers. I estimate that a tether is about half the size of a hub in both height & width. 
   * Hub maximum = just under 8.5 grids (though definitely higher then 8 grids)
   * Hub minimum = exactly 2 grids
   * Offense maximum = exactly 15 grids
