Edited wiki page through web user interface.

--- a/wiki/Running_MoonPy_on_osX.wiki
+++ b/wiki/Running_MoonPy_on_osX.wiki
@@ -12,4 +12,9 @@ First of all download and install python2.5 for osX using the python2.5 installe
 
 
 = Downsides to the quick and easy steps =
-Specifically what the previous steps do is install a 2nd version of python2.5 then installs the dependencies into the library folders of this version of python. This means that you will have 2 versions of python2.5 on your system, the original version and a new version with all the dependencies installed. PyobjC is also pre-installed with the built-in version of python2.5 but is not automatically installed with the 2nd version and so it to becomes 'copied'. Although these systems aren't very large it does result in redundant programs/libraries installed on your computer and is a waste of hard drive space. Your osX will by default still want to launch python programs with the built-in version of python and not see the dependencies we installed. This is the reason for the osXmoon.py file. Moon.Py attempts to run the default version of python2.5, osXmoon.py specifically runs the version of python located in /usr/local/bin which is where the python2.5 installer for osX installs the links for python2.5 along with the dependencies. 
+Specifically what the previous steps do is install a 2nd version of python2.5 then installs the dependencies into the library folders of this version of python. This means that you will have 2 versions of python2.5 on your system, the original version and a new version with all the dependencies installed. PyobjC is also pre-installed with the built-in version of python2.5 but is not automatically installed with the 2nd version and so it to becomes 'copied'. Although these systems aren't very large it does result in redundant programs/libraries installed on your computer and is a waste of hard drive space. Your osX will by default still want to launch python programs with the built-in version of python and not see the dependencies we installed. This is the reason for the osXmoon.py file. Moon.Py attempts to run the default version of python2.5, osXmoon.py specifically runs the version of python located in /usr/local/bin which is where the python2.5 installer for osX installs the links for python2.5 along with the dependencies.
+
+
+
+= osX 10.6 compatibility =
+Currently MoonPy has not been tested with osX 10.6 (snow leopard) and we do not know if the way osX handles python has changed since the 10.5 version. Currently an issue has been reported on the [http://code.google.com/p/tether/issues/detail?id=105&colspec=ID%20Type%20Status%20Priority%20Owner%20Summary bug tracker] for this. Any assistance from someone with osX 10.6 would be appreciated.
